lib/cwren.pas


    WrenBindForeignClassFn = function (vm:PWrenVM; module:Pchar; className:Pchar):WrenForeignClassMethods;cdecl;
  { The callback Wren will use to allocate, reallocate, and deallocate memory. }
  { }
  { If `NULL`, defaults to a built-in function that uses `realloc` and `free`. }
  { The callback Wren uses to resolve a module name. }
  { }
  { Some host applications may wish to support "relative" imports, where the }
  { meaning of an import string depends on the module that contains it. To }
  { support that without baking any policy into Wren itself, the VM gives the }
  { host a chance to resolve an import string. }
  { }
  { Before an import is loaded, it calls this, passing in the name of the }
  { module that contains the import and the import string. The host app can }
  { look at both of those and produce a new "canonical" string that uniquely }
  { identifies the module. This string is then used as the name of the module }
  { going forward. It is what is passed to [loadModuleFn], how duplicate }
  { imports of the same module are detected, and how the module is reported in }
  { stack traces. }
  { }
  { If you leave this function NULL, then the original import string is }
  { treated as the resolved string. }
  { }
  { If an import cannot be resolved by the embedder, it should return NULL and }
  { Wren will report that as a runtime error. }
  { }
  { Wren will take ownership of the string you return and free it for you, so }
  { it should be allocated using the same allocation function you provide }
  { above. }
  { The callback Wren uses to load a module. }
  { }
  { Since Wren does not talk directly to the file system, it relies on the }
  { embedder to physically locate and read the source code for a module. The }
  { first time an import appears, Wren will call this and pass in the name of }
  { the module being imported. The method will return a result, which contains }
  { the source code for that module. Memory for the source is owned by the  }
  { host application, and can be freed using the onComplete callback. }
  { }
  { This will only be called once for any given module name. Wren caches the }
  { result internally so subsequent imports of the same module will use the }
  { previous source and not call this. }
  { }
  { If a module with the given name could not be found by the embedder, it }
  { should return NULL and Wren will report that as a runtime error. }
  { The callback Wren uses to find a foreign method and bind it to a class. }
  { }
  { When a foreign method is declared in a class, this will be called with the }
  { foreign method's module, class, and signature when the class body is }
  { executed. It should return a pointer to the foreign function that will be }
  { bound to that method. }
  { }
  { If the foreign function could not be found, this should return NULL and }
  { Wren will report it as runtime error. }
  { The callback Wren uses to find a foreign class and get its foreign methods. }
  { }
  { When a foreign class is declared, this will be called with the class's }
  { module and name when the class body is executed. It should return the }
  { foreign functions uses to allocate and (optionally) finalize the bytes }
  { stored in the foreign object when an instance is created. }
  { The callback Wren uses to display text when `System.print()` or the other }
  { related functions are called. }
  { }
  { If this is `NULL`, Wren discards any printed text. }
  { The callback Wren uses to report errors. }
  { }
  { When an error occurs, this will be called with the module name, line }
  { number, and an error message. If this is `NULL`, Wren doesn't report any }
  { errors. }
  { The number of bytes Wren will allocate before triggering the first garbage }
  { collection. }
  { }
  { If zero, defaults to 10MB. }
  { After a collection occurs, the threshold for the next collection is }
  { determined based on the number of bytes remaining in use. This allows Wren }
  { to shrink its memory usage automatically after reclaiming a large amount }
  { of memory. }
  { }
  { This can be used to ensure that the heap does not get too small, which can }
  { in turn lead to a large number of collections afterwards as the heap grows }
  { back to a usable size. }
  { }
  { If zero, defaults to 1MB. }
  { Wren will resize the heap automatically as the number of bytes }
  { remaining in use after a collection changes. This number determines the }
  { amount of additional memory Wren will use after a collection, as a }
  { percentage of the current heap size. }
  { }
  { For example, say that this is 50. After a garbage collection, when there }
  { are 400 bytes of memory still in use, the next collection will be triggered }
  { after a total of 600 bytes are allocated (including the 400 already in }
  { use.) }
  { }
  { Setting this to a smaller number wastes less memory, but triggers more }
  { frequent garbage collections. }
  { }
  { If zero, defaults to 50. }
  { User-defined data associated with the VM. }
    PWrenConfiguration  = ^WrenConfiguration;
    WrenConfiguration = record
        reallocateFn : WrenReallocateFn;
        resolveModuleFn : WrenResolveModuleFn;
        loadModuleFn : WrenLoadModuleFn;
        bindForeignMethodFn : WrenBindForeignMethodFn;
        bindForeignClassFn : WrenBindForeignClassFn;
        writeFn : WrenWriteFn;
        errorFn : WrenErrorFn;
        initialHeapSize : size_t;
        minHeapSize : size_t;
        heapGrowthPercent : longint;
        userData : pointer;
      end;

    WrenInterpretResult =  Longint;

Const
  WREN_RESULT_SUCCESS = 0;
  WREN_RESULT_COMPILE_ERROR = 1;
  WREN_RESULT_RUNTIME_ERROR = 2;

  { The type of an object stored in a slot. }
  { }
  { This is not necessarily the object's *class*, but instead its low level }
  { representation type. }
  { The object is of a type that isn't accessible by the C API. }

  type
    WrenType =  Longint;
    Const
      WREN_TYPE_BOOL = 0;
      WREN_TYPE_NUM = 1;
      WREN_TYPE_FOREIGN = 2;
      WREN_TYPE_LIST = 3;
      WREN_TYPE_MAP = 4;
      WREN_TYPE_NULL = 5;
      WREN_TYPE_STRING = 6;
      WREN_TYPE_UNKNOWN = 7;

  { Get the current wren version number. }
  { }
  { Can be used to range checks over versions. }

  function wrenGetVersionNumber:longint;cdecl;external cDllName;

  { Initializes [configuration] with all of its default values. }
  { }
  { Call this before setting the particular fields you care about. }
  procedure wrenInitConfiguration(configuration:PWrenConfiguration);cdecl;external cDllName;

  { Creates a new Wren virtual machine using the given [configuration]. Wren }
  { will copy the configuration data, so the argument passed to this can be }
  { freed after calling this. If [configuration] is `NULL`, uses a default }
  { configuration. }
  function wrenNewVM(configuration:PWrenConfiguration):PWrenVM;cdecl;external cDllName;

  { Disposes of all resources is use by [vm], which was previously created by a }
  { call to [wrenNewVM]. }
  procedure wrenFreeVM(vm:PWrenVM);cdecl;external cDllName;

  { Immediately run the garbage collector to free unused memory. }
  procedure wrenCollectGarbage(vm:PWrenVM);cdecl;external cDllName;

  { Runs [source], a string of Wren source code in a new fiber in [vm] in the }
  { context of resolved [module]. }
(* Const before type ignored *)
(* Const before type ignored *)
  function wrenInterpret(vm:PWrenVM; module:Pchar; source:Pchar):WrenInterpretResult; cdecl; external cDllName; 

  { Creates a handle that can be used to invoke a method with [signature] on }
  { using a receiver and arguments that are set up on the stack. }
  { }
  { This handle can be used repeatedly to directly invoke that method from C }
  { code using [wrenCall]. }
  { }
  { When you are done with this handle, it must be released using }
  { [wrenReleaseHandle]. }
(* Const before type ignored *)
  function wrenMakeCallHandle(vm:PWrenVM; signature:Pchar):PWrenHandle; cdecl; external cDllName;

  { Calls [method], using the receiver and arguments previously set up on the }
  { stack. }
  { }
  { [method] must have been created by a call to [wrenMakeCallHandle]. The }
  { arguments to the method must be already on the stack. The receiver should be }
  { in slot 0 with the remaining arguments following it, in order. It is an }
  { error if the number of arguments provided does not match the method's }
  { signature. }
  { }
  { After this returns, you can access the return value from slot 0 on the stack. }
  function wrenCall(vm:PWrenVM; method:PWrenHandle):WrenInterpretResult; cdecl; external cDllName; 

  { Releases the reference stored in [handle]. After calling this, [handle] can }
  { no longer be used. }
  procedure wrenReleaseHandle(vm:PWrenVM; handle:PWrenHandle); cdecl; external cDllName; 

  { The following functions are intended to be called from foreign methods or }
  { finalizers. The interface Wren provides to a foreign method is like a }
  { register machine: you are given a numbered array of slots that values can be }
  { read from and written to. Values always live in a slot (unless explicitly }
  { captured using wrenGetSlotHandle(), which ensures the garbage collector can }
  { find them. }
  { }
  { When your foreign function is called, you are given one slot for the receiver }
  { and each argument to the method. The receiver is in slot 0 and the arguments }
  { are in increasingly numbered slots after that. You are free to read and }
  { write to those slots as you want. If you want more slots to use as scratch }
  { space, you can call wrenEnsureSlots() to add more. }
  { }
  { When your function returns, every slot except slot zero is discarded and the }
  { value in slot zero is used as the return value of the method. If you don't }
  { store a return value in that slot yourself, it will retain its previous }
  { value, the receiver. }
  { }
  { While Wren is dynamically typed, C is not. This means the C interface has to }
  { support the various types of primitive values a Wren variable can hold: bool, }
  { double, string, etc. If we supported this for every operation in the C API, }
  { there would be a combinatorial explosion of functions, like "get a }
  { double-valued element from a list", "insert a string key and double value }
  { into a map", etc. }
  { }
  { To avoid that, the only way to convert to and from a raw C value is by going }
  { into and out of a slot. All other functions work with values already in a }
  { slot. So, to add an element to a list, you put the list in one slot, and the }
  { element in another. Then there is a single API function wrenInsertInList() }
  { that takes the element out of that slot and puts it into the list. }
  { }
  { The goal of this API is to be easy to use while not compromising performance. }
  { The latter means it does not do type or bounds checking at runtime except }
  { using assertions which are generally removed from release builds. C is an }
  { unsafe language, so it's up to you to be careful to use it correctly. In }
  { return, you get a very fast FFI. }
  { Returns the number of slots available to the current foreign method. }
  function wrenGetSlotCount(vm:PWrenVM):longint; cdecl; external cDllName; 

  { Ensures that the foreign method stack has at least [numSlots] available for }
  { use, growing the stack if needed. }
  { }
  { Does not shrink the stack if it has more than enough slots. }
  { }
  { It is an error to call this from a finalizer. }
  procedure wrenEnsureSlots(vm:PWrenVM; numSlots:longint); cdecl; external cDllName; 

  { Gets the type of the object in [slot]. }
  function wrenGetSlotType(vm:PWrenVM; slot:longint):WrenType; cdecl; external cDllName; 

  { Reads a boolean value from [slot]. }
  { }
  { It is an error to call this if the slot does not contain a boolean value. }
  function wrenGetSlotBool(vm:PWrenVM; slot:longint):Boolean; cdecl; external cDllName;
